--- a/message.properties
+++ b/message.properties
@@ -1,2 +1,3 @@
 templateLogin=/{lang}/v1/{login}
 templateId=/{lang}/v1/{id}
+checkJwtUri=https://accountingpropets.herokuapp.com/en/v1/token/validation
