--- a/account.properties
+++ b/account.properties
@@ -3,3 +3,4 @@ term=15
 template=/{lang}/v1/{login}
 avatarUri=https://www.gravatar.com/avatar/0?d=mp
 complainUri=https://accountingpropets.herokuapp.com/en/v1/complain/
+activityUri=https://accountingpropets.herokuapp.com/en/v1/
