Update and rename dataservice.properties to userdata.properties

--- a/userdata.properties
+++ b/userdata.properties
@@ -13,3 +13,4 @@ dataHotelsUri=http://localhost:8085/en/v1/userdata
 dataWalkingUri=http://localhost:8085/en/v1/userdata
 dataFosteringUri=http://localhost:8085/en/v1/userdata
 dataVetHelpUri=http://localhost:8085/en/v1/userdata
+checkJwtUri=https://accountingpropets.herokuapp.com/en/v1/token/validation
