--- a/message.properties
+++ b/message.properties
@@ -1,3 +1,5 @@
 templateLogin=/{lang}/v1/{login}
 templateId=/{lang}/v1/{id}
 checkJwtUri=https://accountingpropets.herokuapp.com/en/v1/token/validation
+#complainUri=https://kafka
+activityUri=https://accountingpropets.herokuapp.com/en/v1/
