--- a/message.properties
+++ b/message.properties
@@ -2,5 +2,5 @@ templateLogin=/{lang}/v1/{login}
 templateId=/{lang}/v1/{id}
 checkJwtUri=https://accountingpropets.herokuapp.com/en/v1/token/validation
 #complainUri=https://kafka
-#activityUri=https://accountingpropets.herokuapp.com/en/v1/
-activityUri=localhost:8080/
+activityUri=https://accountingpropets.herokuapp.com/en/v1/
+
