--- a/lostfound.properties
+++ b/lostfound.properties
@@ -8,3 +8,4 @@ checkJwtUri=https://accountingpropets.herokuapp.com/en/v1/token/validation
 activityUri=https://accountingpropets.herokuapp.com/en/v1/
 #radius=3
 asyncSearchUri=
+test=ujm
