--- a/userdata.properties
+++ b/userdata.properties
@@ -1,4 +1,4 @@
-dataAccountUri=https://accountingpropets.herokuapp.com/en/v1/{login}/favorites
+dataAccountUri=https://accountingpropets.herokuapp.com/en/v1/{login}/userdata
 dataMessageUri=https://messagingpropets.herokuapp.com/en/v1/userdata
 dataLostFoundUri=https://lostfoundpropets.herokuapp.com/en/v1/userdata
 #dataHotelsUri=https://lostfoundpropets.herokuapp.com/en/v1/userdata
