--- a/account.properties
+++ b/account.properties
@@ -4,5 +4,5 @@ template=/{lang}/v1/{login}
 avatarUri=https://www.gravatar.com/avatar/0?d=mp
 complainUri=kafka
 activityUri=https://accountingpropets.herokuapp.com/en/v1/
-#updateUserData=https://...
+updateUserData=https://userdatapropets.herokuapp.com/en/v1/updateuser
 
