--- a/lostfound.properties
+++ b/lostfound.properties
@@ -8,4 +8,4 @@ checkJwtUri=https://accountingpropets.herokuapp.com/en/v1/token/validation
 activityUri=https://accountingpropets.herokuapp.com/en/v1/
 radius=1
 distanceMultiplier=6378.137
-asyncSearchUri=https://converterpropets.herokuapp.com/en/v1/searchdata/
+UrlDeleteInElastic=https://propets-converter-tosearch.herokuapp.com/en/v1/
